# dna_nexus

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/: model.py  solve.py
test/: output15  output7  output80  test_solve.py
